// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="page-header__title"
  >
    <h1>
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.35
      </span>
    </h1>
  </div>
  <div
    className="page-header__button"
  >
    <Link
      className="link"
      to="/create"
    >
      New Expense
    </Link>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="page-header__title"
  >
    <h1>
      Viewing 
      <span>
        10
      </span>
       
      expenses
       totalling 
      <span>
        $23.50
      </span>
    </h1>
  </div>
  <div
    className="page-header__button"
  >
    <Link
      className="link"
      to="/create"
    >
      New Expense
    </Link>
  </div>
</div>
`;
